@@ -10,8 +10,13 @@ dctrl-tools (2.14) UNRELEASED; urgency=low
     Closes: #508953 (when greping through source packages, 
                      tbl-control can't list Files
     Reported by Gerfried Fuchs <rhonda@debian.at>.
+  * tests/bug506138.{sh,out}: New test case.
+  * grep-dctrl.c [apptok]: Forbid mixing the predicate and input files.
+    It never worked, anyway.
+    Closes: #506138 (Segfault when calling with wrong order of parameters)
+    Reported by Marco Túlio Gontijo e Silva <marcot@holoscopio.com>.
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Tue, 06 Jan 2009 19:49:31 +0200
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Tue, 06 Jan 2009 20:20:17 +0200
 
 dctrl-tools (2.13.0) unstable; urgency=low
 
